Module 8/m08a05devices-handout/grading/2024-10-31-12-25-12/compile.err
Device.java:4: error: interface CanTakePictures is public, should be declared in a file named CanTakePictures.java
public interface CanTakePictures extends Device {
       ^
Device.java:7: error: interface CanPlayMusic is public, should be declared in a file named CanPlayMusic.java
public interface CanPlayMusic extends Device {
       ^
Device.java:10: error: interface CanMakeCalls is public, should be declared in a file named CanMakeCalls.java
public interface CanMakeCalls extends Device {
       ^
3 errors
